# Hypeon_Analaytics

./: .env.example  .gitignore  PR_DESCRIPTION.md
artifacts/: copilot_questions_report.json  validation_report.json
artifacts/chat_logs/: smoke_1.json  smoke_2.json  smoke_3.json  smoke_4.json  smoke_5.json
artifacts/copilot_questions_logs/: q_01.json  (+18 more)
backend/: Dockerfile
docs/: copilot_migration.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.js
hypeon/: .env.example  README.md  RUN.md  pyproject.toml
hypeon/apps/api/: Dockerfile
hypeon/apps/api/src/: app.py  config.py  copilot.py  copilot_decision_engine.py  copilot_intent_router.py  middleware.py
hypeon/apps/api/src/copilot_prompts/: context_slot.txt  system.txt
hypeon/apps/api/tests/: test_app.py
hypeon/apps/web/: index.html  tailwind.config.js  tsconfig.tsbuildinfo
hypeon/apps/web/src/: api.ts  index.css
hypeon/apps/web/src/components/: CopilotMessageContent.tsx  Layout.tsx
hypeon/apps/web/src/pages/: Copilot.tsx  Dashboard.tsx  Decisions.tsx  Metrics.tsx  Report.tsx
hypeon/data/raw/: ad_clicks.csv  bing_ads.csv  pinterest_ads.csv  shopify_orders.csv  woocommerce_orders.csv
hypeon/design/: ingest.md  mmm.md
hypeon/infra/migrations/versions/: 005_engine_run_metadata.py  006_bing_pinterest_woocommerce.py  007_click_id_and_ad_clicks.py
hypeon/scripts/: generate_sample_data.py
pr/: pr.patch
scripts/: build-push-backend-us-central1.ps1  docker-build-push.ps1  test_copilot_history_e2e.py  test_copilot_quick.py  test_copilot_sessions_display.py
(+35 files in other folders)
